cmake_minimum_required(VERSION 3.15)
project(algorithm_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(algorithm_cpp main.cpp leetcode/esay/1_AddSum.cpp test_define.h leetcode/esay/7_ReverseInteger.cpp leetcode/esay/20_ValidCharactor.cpp leetcode/esay/21_MergeSortedLinkedList.cpp leetcode/common/ListNode.cpp leetcode/common/ListNode.h leetcode/esay/26_RemoveDupValue.cpp leetcode/esay/27_RemoveValue.cpp leetcode/esay/35_SearchInsert.cpp)