
# 打印当前目录
message("源程序工程当前目录: "  ${CMAKE_CURRENT_SOURCE_DIR})

AUX_SOURCE_DIRECTORY(. LEETCODE_SRCS)
AUX_SOURCE_DIRECTORY(./common LEETCODE_SRCS)
AUX_SOURCE_DIRECTORY(./esay LEETCODE_SRCS)
AUX_SOURCE_DIRECTORY(./middle LEETCODE_SRCS)
AUX_SOURCE_DIRECTORY(./hard LEETCODE_SRCS)

message("LEETCODE_SRCS: " ${LEETCODE_SRCS})

add_library(leetcode ${LEETCODE_SRCS})